Friday, April 26, 2002		Ron Steinke <rsteinke@w-link.net>

	* Added WFMATH_DEPRECATE_OLD_INTERSECT flag to build
	  without the old intersect API. Fixed wfmath to build
	  with the old API removed.

Friday, April 26, 2002		Ron Steinke <rsteinke@w-link.net>

	* Bumped version number for 0.2.7 release

Sunday, April 21, 2002		Ron Steinke <rsteinke@w-link.net>

	* Changed format sent by AxisBox<>::toAtlas() for better
	  network optimization

Wednesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* The eris-support-on-msvc changes now work

Wednesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* Hopefully have enough of wfmath working on msvc now to support eris

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).7

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).6

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).5

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).4

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).3

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* (Continued work on MSVC++ workarounds).2

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* Continued work on MSVC++ workarounds

Tuesday, April 9, 2002		Ron Steinke <rsteinke@w-link.net>

	* Started adding workarounds to compile with MSVC++
	* Started adding doxygen docs

Friday, March 24, 2002		Ron Steinke <rsteinke@w-link.net>

	* Tweaked the syntax of the new Parallel() function slightly

Thursday, March 23, 2002	Ron Steinke <rsteinke@w-link.net>

	* Finished Intersect(Polygon, Polygon). Now I've just got to
	  test all those intersection functions
	* Added Parallel() and Perpendicular() functions to compare the
	  orientation of two vectors
	* Incremented version number to 0.2.6
