@@ -1,3 +1,12 @@
+Friday, May 10, 2002		Ron Steinke <rsteinke@w-link.net>
+
+	* Switched sign convention for quaternions to match
+	  the more sensible convention used by cyphesis.
+	  This fixes a bug with wfmath and cyphesis miscommunicating
+	  about orientations over the network, but introduces
+	  a similar problem with older versions of wfmath.
+	  Everyone is urged to upgrade wfmath.
+
 Friday, April 26, 2002		Ron Steinke <rsteinke@w-link.net>
 
 	* Added WFMATH_DEPRECATE_OLD_INTERSECT flag to build
